--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <script src="script.js"></script>
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   </head>
   <body>
     <h1>Hello there!</h1>
+    asdas adasdas
     <a href="/me.html">My other page</a>
   </body>
 </html>
