--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
   </head>
   <body>
-    <h1>Hello there!</h1>
-    asdas adasdas
-    <a href="/me.html">My other page</a>
+    <section>
+      <div class="vinculado">
+        <h2>hola</h2>
+      </div>
+    </section>
   </body>
 </html>
